--- a/public/stylesheets/sass/code.scss
+++ b/public/stylesheets/sass/code.scss
@@ -1,15 +1,15 @@
 .ruby {
   color: white;
 
-  .k {
+  .nb, .k {
     color: #CC7833;
   }
 
-  .o, .nf, .n, .p, .vi {
+  .no, .o, .nf, .n, .p, .vi {
     color: white;
   }
 
-  .no, .sh, .s2, .sx, .se, .s1 {
+  .sh, .s2, .sx, .se, .s1 {
     color: #66CC33;
   }
 
