A new blog post, because why not.

--- a/public/stylesheets/sass/screen.scss
+++ b/public/stylesheets/sass/screen.scss
@@ -108,6 +108,10 @@ body {
       max-width: 100%;
     }
 
+    sup {
+      line-height: 0;
+    }
+
     .footnotes {
       margin-top: 4em;
       padding: 1em;
