--- a/public/stylesheets/code.css
+++ b/public/stylesheets/code.css
@@ -1,33 +1,1 @@
-/* line 1, sass/code.scss */
-.ruby {
-  color: white;
-}
-/* line 4, sass/code.scss */
-.ruby .nb, .ruby .k {
-  color: #CC7833;
-}
-/* line 8, sass/code.scss */
-.ruby .no, .ruby .o, .ruby .nf, .ruby .n, .ruby .p, .ruby .vi {
-  color: white;
-}
-/* line 12, sass/code.scss */
-.ruby .sh, .ruby .s2, .ruby .sx, .ruby .se, .ruby .s1 {
-  color: #66CC33;
-}
-/* line 16, sass/code.scss */
-.ruby .ss, .ruby .kp, .ruby .mi {
-  color: #3387CC;
-}
-/* line 20, sass/code.scss */
-.ruby .c1, .ruby .cm, .ruby .cp {
-  color: #9933CC;
-}
-/* line 24, sass/code.scss */
-.ruby .sr {
-  color: #cccc33;
-}
-/* line 28, sass/code.scss */
-.ruby .sb {
-  background-color: #cccc33;
-  color: black;
-}
+.ruby{color:white}.ruby .nb,.ruby .k{color:#CC7833}.ruby .no,.ruby .o,.ruby .nf,.ruby .n,.ruby .p,.ruby .vi{color:white}.ruby .sh,.ruby .s2,.ruby .sx,.ruby .se,.ruby .s1{color:#66CC33}.ruby .ss,.ruby .kp,.ruby .mi{color:#3387CC}.ruby .c1,.ruby .cm,.ruby .cp{color:#9933CC}.ruby .sr{color:#cccc33}.ruby .sb{background-color:#cccc33;color:black}.code.plaintext{color:white}
