Purge unused CSS rules from stylesheets
This drops the CSS from something like 80k to 5k, pretty neat.

I've also added a site test snip to exercise all the various kinds of
content we want to display, though it remains a work in progress.

--- a/public/stylesheets/scss/interblah.scss
+++ b/public/stylesheets/scss/interblah.scss
@@ -115,6 +115,16 @@ article {
     @extend .bg-light-gray;
     @extend .pa1;
   }
+
+  .footnotes {
+    @extend .f6;
+    @extend .pt3, .pb3, .mt4;
+    @extend .bg-light-gray;
+
+    h2 {
+      @extend .pl3, .pr3, .mt0;
+    }
+  }
 }
 
 body > footer {
