--- a/public/stylesheets/scss/interblah.scss
+++ b/public/stylesheets/scss/interblah.scss
@@ -55,6 +55,10 @@ article {
       @extend .i, .f6;
       @extend .gray;
     }
+
+    .p-author {
+      @extend .dn;
+    }
   }
 
   &.with-table-of-contents {
